--- a/package.json
+++ b/package.json
@@ -18,7 +18,19 @@
     "react-dom": "^15.6.1",
     "webpack": "^3.5.5",
     "axios": "^0.17.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "body-parser": "^1.18.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "mongodb": "^3.0.1",
+    "mongoose": "^4.13.7",
+    "bluebird": "^3.5.1",
+    "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14"
   },
   "engines": {
     "node": "8.x"
